# sofa-designer

./: .gitignore  CMakeLists.txt  README.md  a6.angles  angles.json
apps/: CMakeLists.txt  branch_14.cc  branch_15.cc  branch_7.cc  check_6.cc  prove_hor_half.cc  prove_hor_ub.cc  prove_inj_1to1.cc  prove_inj_1to2.cc  prove_lb.cc  prove_mono_1to1.cc  prove_mono_x.cc  prove_mono_x_15.cc  prove_mono_y.cc  prove_ub.cc  prove_xineq.cc
lib/: CMakeLists.txt  expect.h
lib/sofa/: branch_logic.cc  branch_logic.h  branch_tree.cc  branch_tree.h  cereal.cc  cereal.h  context.cc  context.h  forms.h  geom.cc  geom.h  ineq.cc  ineq.h  json.h  lform.cc  lform.h  number.h  qform.cc  qform.h  qp.cc  qp.h  state.cc  state.h
libs/: CMakeLists.txt
libs/sofa/: branch_logic.cc  branch_tree.cc  branch_tree.h  context.cc  geom.h  ineq.cc  lform.h  number.h  qform.cc  qform.h  qp.h  state.cc
runs/: angles4.json  angles6.json  run_sbranch.sh  run_sprove.sh  test.sh  theta5.json  theta8.json
runs/theta15/: angles.json  h12_lb.sh  h23_lb.sh  h45_lb.sh  h56_lb.sh  h67_lb.sh  h78_lb.sh  h89_lb.sh  h90_lb.sh  run_sbranch.sh  w_lb_case0.sh  x68_lb.sh
runs/theta5/: angles.json  h12_lb.sh  h23_lb.sh  h34_lb.sh  h45_lb.sh  h56_lb.sh
runs/theta7/: angles.json  h12_lb.sh  h34_lb.sh  h45_lb.sh  run_sbranch.sh
test/: .vimrc  CMakeLists.txt  cereal.cc  compatible.cc  maximize.cc  negdef.cc  search.cc  split_values.cc  state.cc
tests/: compatible.cc
